--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "@astrojs/rss": "latest",
         "@astrojs/sitemap": "latest",
         "@astrojs/ts-plugin": "latest",
+        "@astrojs/vercel": "^7.8.2",
+        "@vercel/analytics": "^1.3.2",
         "astro": "latest",
         "astro-expressive-code": "latest",
         "astro-i18n-aut": "latest",
