chore: Upgrade dependencies

--- a/package.json
+++ b/package.json
@@ -10,39 +10,39 @@
         "astro": "astro"
     },
     "dependencies": {
-        "@astrojs/mdx": "latest",
-        "@astrojs/partytown": "latest",
-        "@astrojs/rss": "latest",
-        "@astrojs/sitemap": "latest",
-        "@astrojs/ts-plugin": "latest",
+        "@astrojs/mdx": "^3.1.8",
+        "@astrojs/partytown": "^2.1.2",
+        "@astrojs/rss": "^4.0.9",
+        "@astrojs/sitemap": "^3.2.1",
+        "@astrojs/ts-plugin": "^1.10.4",
         "@astrojs/vercel": "^7.8.2",
         "@vercel/analytics": "^1.3.2",
-        "astro": "latest",
-        "astro-expressive-code": "latest",
-        "astro-i18n-aut": "latest",
-        "astro-purgecss": "latest",
-        "lodash": "latest",
-        "luxon": "latest",
-        "markdown-it": "latest",
-        "purgecss": "latest",
-        "remark-pangu": "latest"
+        "astro": "^4.16.7",
+        "astro-expressive-code": "^0.37.1",
+        "astro-i18n-aut": "^0.7.0",
+        "astro-purgecss": "^4.6.1",
+        "lodash": "^4.17.21",
+        "luxon": "^3.5.0",
+        "markdown-it": "^14.1.0",
+        "purgecss": "^6.0.0",
+        "remark-pangu": "^2.2.0"
     },
     "devDependencies": {
-        "@expressive-code/core": "latest",
-        "@rollup/plugin-yaml": "latest",
-        "@types/lodash": "latest",
-        "@types/luxon": "latest",
-        "@types/markdown-it": "latest",
-        "@types/node": "^20.12.2",
-        "debug": "latest",
-        "hastscript": "latest",
-        "jsonc-parser": "latest",
-        "prettier": "latest",
-        "prettier-plugin-astro": "latest",
-        "remark-directive": "latest",
-        "shikiji": "latest",
-        "slash": "latest",
-        "unist-util-visit": "latest",
-        "unocss": "latest"
+        "@expressive-code/core": "^0.37.1",
+        "@rollup/plugin-yaml": "^4.1.2",
+        "@types/lodash": "^4.17.12",
+        "@types/luxon": "^3.4.2",
+        "@types/markdown-it": "^14.1.2",
+        "@types/node": "^22.8.2",
+        "debug": "^4.3.7",
+        "hastscript": "^9.0.0",
+        "jsonc-parser": "^3.3.1",
+        "prettier": "^3.3.3",
+        "prettier-plugin-astro": "^0.14.1",
+        "remark-directive": "^3.0.0",
+        "shikiji": "^0.10.2",
+        "slash": "^5.1.0",
+        "unist-util-visit": "^5.0.0",
+        "unocss": "^0.63.6"
     }
 }
